--- a/blog/package.json
+++ b/blog/package.json
@@ -52,10 +52,12 @@
     "@tailwindcss/postcss": "^4.0.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/cookie": "^1.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "cookie": "^1.0.2",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "jest": "^29.7.0",
